updated config files to uniform configuration for react projects

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,14 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@features/*": ["src/features/*"]
-    }
+      "@features/*": ["src/features/*"],
+      "@images/*": ["src/images/*"]
+    },
+    "target": "es6",
+    "moduleResolution": "node"
+  },
+  "exclude": ["node_modules"],
+  "typeAcquisition": {
+    "include": ["jest"]
   }
 }
