--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,7 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -17,5 +16,6 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": "off"
     }
 }
